--- a/segmentation.html
+++ b/segmentation.html
@@ -22,6 +22,21 @@ line {
     font-family: sans-serif;
     font-size: 9px;
 }
+.zoneHoverShow{
+  stroke:black;
+  stroke-width:0.7px;
+}
+.zoneHoverHide {
+  fill: silver;
+  stroke:black;
+  stroke-width:0.2px;
+}
+.meanHoverShow{
+  font-size: 16px;
+}
+.meanHoverHide{
+
+}
 </style>
 </head>
 <body>
@@ -60,6 +75,7 @@ queue()
   .await(ready);
 
 function ready(error, segmentation, segZoneLabels, segItemLabels){
+  //console.log(segmentation, segZoneLabels, segItemLabels)
   //GETTING THE DATA AND DOMAINS READY
   var maxPosition = d3.max(segmentation, function(d){return d.dotPosition});
   var xDomain = [] // creating the x-axis domain for the chart (a series of dots)
@@ -101,8 +117,10 @@ function ready(error, segmentation, segZoneLabels, segItemLabels){
 
   var colorScale = d3.scale.linear() //could change the scale later
       .domain(colorDomain) //based on the maximum volatility value in the data (better than just binning)
-      .range(["#0000ff", "#ff0000"])
+      .range(["#C0C0C0", "#ff0000"])
       .interpolate(d3.interpolateLab);
+  
+  var dotRadius = 2.5;
   var zoneNameGap = 30;
   var itemNameGap = 10 + zoneNameGap;
   var itemNamestagger = 10;
@@ -117,27 +135,28 @@ function ready(error, segmentation, segZoneLabels, segItemLabels){
       .text('x')
       .attr({
         x: function(d){return xScale(d.dotPosition)},
-        y: function(d){return yScale(d.mean)}
+        y: function(d){return yScale(d.mean)},
+        class: 'meanCross'
       })
-      .style('font-size', xFont)
+      .attr('font-size', xFont)
       .style('font-weight', 'bold')
       .style('alignment-baseline', 'central')
       .style('text-anchor', 'middle')
       .style('cursor', 'default');
 
   segChart.append('g')
-      .attr('class', 'zone-labels') //corresponding to each column of dots
-      .selectAll('text')
+      .selectAll('.zoneLab') //corresponding to each column of dots
       .data(segZoneLabels)
       .enter()
       .append('text')
       .text(function(d){return d.zoneCode})
       .attr({
         x: function(d) {return xScale(d.dotPosition)},
-        y: height + zoneNameGap
+        y: height + zoneNameGap,
+        class: 'zoneLab'
       })
       .style('text-anchor', 'middle')
-      .style('font-size', xFont)
+      .attr('font-size', xFont)
       .style('cursor', 'default');
 
   segChart.append('g')
@@ -155,7 +174,7 @@ function ready(error, segmentation, segZoneLabels, segItemLabels){
       .style('font-size', xFont)
       .style('cursor', 'default');
 
-  var rects = segChart.append('g')
+  segChart.append('g')
       .selectAll('.hover-rects')
       .data(segZoneLabels)
       .enter()
@@ -164,10 +183,14 @@ function ready(error, segmentation, segZoneLabels, segItemLabels){
         x: function(d) {return xScale(d.dotPosition) - containerPadding.left},
         y: 0,
         height: height + zoneNameGap,
-        width: xFont
+        width: xFont,
+        class: 'zoneMean',
+        id: function(d){return d.zoneCode}
       })
-      .style("fill", "none")
-      .style('cursor', 'default');
+      .style("fill-opacity", "0")
+      .style('cursor', 'default')
+      .on('mouseover', mouseoverRect)
+      .on('mouseout', mouseoutRect);
 
   segChart.append('g') //Adding the axis to the bottom of the first panel
       .attr('class', 'y-axis')
@@ -181,11 +204,14 @@ function ready(error, segmentation, segZoneLabels, segItemLabels){
       .enter()
       .append('circle')
       .attr({
-        r: 2,
+        r: dotRadius,
         cx: function(d){return xScale(d.dotPosition)},
         cy: function(d){return yScale(d.seg)},
-        fill: function(d){return colorScale(d.seg)}
+        fill: function(d){return colorScale(d.seg)},
+        class: 'dots'
       })
+      .on('mouseover', mouseoverDot)
+      .on('mouseout', mouseoutDot)
 
   segChart.append('g')
       .selectAll('.meanLines')
@@ -201,16 +227,30 @@ function ready(error, segmentation, segZoneLabels, segItemLabels){
 
   //DEFINING THE MOUSEOVER FUNCTION
   function mouseoverRect(d){
-
+    d3.selectAll('.dots').filter(function(e){return e.zoneCode != d.zoneCode}).classed('zoneHoverHide', true)
+    d3.selectAll('.dots').filter(function(e){return e.zoneCode == d.zoneCode}).classed('zoneHoverShow', true)
+    d3.selectAll('.meanCross').filter(function(e){return e.zoneCode != d.zoneCode}).classed('meanHoverHide', true)
+    d3.selectAll('.meanCross').filter(function(e){return e.zoneCode == d.zoneCode}).classed('meanHoverShow', true)
+    d3.selectAll('.zoneLab').filter(function(e){return e.zoneCode != d.zoneCode}).classed('meanHoverHide', true)
+    d3.selectAll('.zoneLab').filter(function(e){return e.zoneCode == d.zoneCode}).classed('meanHoverShow', true)
   }
   function mouseoutRect(d){
-
+    d3.selectAll('.dots').filter(function(e){return e.zoneCode != d.zoneCode}).classed('zoneHoverHide', false)
+    d3.selectAll('.dots').filter(function(e){return e.zoneCode == d.zoneCode}).classed('zoneHoverShow', false)
+    d3.selectAll('.meanCross').filter(function(e){return e.zoneCode != d.zoneCode}).classed('meanHoverHide', false)
+    d3.selectAll('.meanCross').filter(function(e){return e.zoneCode == d.zoneCode}).classed('meanHoverShow', false)
+    d3.selectAll('.zoneLab').filter(function(e){return e.zoneCode != d.zoneCode}).classed('meanHoverHide', false)
+    d3.selectAll('.zoneLab').filter(function(e){return e.zoneCode == d.zoneCode}).classed('meanHoverShow', false)
   }
   function mouseoverDot(d){
-
+    console.log(d)
+    d3.selectAll('.dots').filter(function(e){return e.state != d.state}).classed('zoneHoverHide', true)
+    d3.selectAll('.dots').filter(function(e){return e.state == d.state}).classed('zoneHoverShow', true).attr({r: 1.5*dotRadius})
+    //tooltips for centre name state name and value
   }
   function mouseoutDot(d){
-    
+    d3.selectAll('.dots').filter(function(e){return e.state != d.state}).classed('zoneHoverHide', false)
+    d3.selectAll('.dots').filter(function(e){return e.state == d.state}).classed('zoneHoverShow', false).attr({r: dotRadius})
   }
 
 
