--- a/segmentation.html
+++ b/segmentation.html
@@ -24,7 +24,7 @@ line {
 }
 .zoneHoverShow{
   stroke:black;
-  stroke-width:0.7px;
+  stroke-width:0.2px;
 }
 .zoneHoverHide {
   fill: silver;
@@ -35,7 +35,7 @@ line {
   font-size: 16px;
 }
 .meanHoverHide{
-
+  color: silver;
 }
 </style>
 </head>
@@ -86,27 +86,27 @@ function ready(error, segmentation, segZoneLabels, segItemLabels){
   var colorDomain = yDomain; //same with the color scale
 
   //CREATING THE CANVAS
-  var containerSize = {'height': 200, 'width': 600};
-  var containerMargin = {top: 0.02 * containerSize.height , right: 0.01 * containerSize.width, bottom: 0.2 * containerSize.height, left: 0.01 * containerSize.width}; //controls the spacing between the edge of the container and the inner chart
-  var containerPadding = {top: 0.06 * containerSize.height, right: 0.006 * containerSize.width, bottom: 0.06 * containerSize.height, left: 0.01 * containerSize.width}; //controls the size of the chart
-  var chartSize = {'height': containerSize.height - containerMargin.top - containerMargin.bottom, 'width': containerSize.width - containerMargin.right - containerMargin.left};
-  var width = chartSize.width - containerPadding.left - containerPadding.right;
-  var height = chartSize.height - containerPadding.top - containerPadding.bottom;
+  var containerSize = {'height': 200, 'width': 560};
+  var margin = {top: 0.06*containerSize.height , right: 0.006*containerSize.width, bottom: 0.006*containerSize.height, left: 0.06*containerSize.width};
+  var padding = {top: 0.006*containerSize.height, right: 0.006*containerSize.width, bottom: 0.3*containerSize.height, left: 0.02*containerSize.width};
+  var width = containerSize.width - margin.right - margin.left; //Chart width
+  var height = containerSize.height - margin.top - margin.bottom; //Chart height
+  
   var segChart = d3.select('#segChart').append('svg') //http://bl.ocks.org/mbostock/3019563
         .attr({
-          height: containerSize.height,
-          width: containerSize.width
+          height: height + margin.top + margin.bottom,
+          width: width + margin.left + margin.right
         })
       .append('g')
-      .attr("transform", "translate(" + containerMargin.left + "," + containerMargin.top + ")");
-
+      .attr("transform", "translate(" + (margin.left) + "," + (margin.top)+ ")");//moving the origin to the point where it starts
+  
   var xScale = d3.scale.ordinal() //the ordinal scale uses dotpositions to place them on charts
       .domain(xDomain)
-      .rangeRoundBands([containerPadding.left, width+containerPadding.left], .1);
+      .rangeBands([padding.left, width], .1);
 
   var yScale = d3.scale.linear() //set to the range of seg values
       .domain(yDomain)
-      .range([containerPadding.top+height, containerPadding.top]);
+      .range([height - padding.bottom, 0]);
 
   var yAxis = d3.svg.axis()
       .scale(yScale)
@@ -119,12 +119,10 @@ function ready(error, segmentation, segZoneLabels, segItemLabels){
       .domain(colorDomain) //based on the maximum volatility value in the data (better than just binning)
       .range(["#C0C0C0", "#ff0000"])
       .interpolate(d3.interpolateLab);
-  
-  var dotRadius = 2.5;
-  var zoneNameGap = 30;
-  var itemNameGap = 10 + zoneNameGap;
-  var itemNamestagger = 10;
+
+  var dotRadius = 3;
   var xFont = 10;
+  var itemNamestagger = 10;
 
   //DRAWING THE DIFFERENT ELEMENTS
   segChart.append('g')
@@ -152,7 +150,7 @@ function ready(error, segmentation, segZoneLabels, segItemLabels){
       .text(function(d){return d.zoneCode})
       .attr({
         x: function(d) {return xScale(d.dotPosition)},
-        y: height + zoneNameGap,
+        y: height - padding.bottom/1.5,
         class: 'zoneLab'
       })
       .style('text-anchor', 'middle')
@@ -168,7 +166,7 @@ function ready(error, segmentation, segZoneLabels, segItemLabels){
       .text(function(d){return d.item})
       .attr({
         x: function(d){return (xScale(Math.floor(d.xPosition)) + xScale(Math.ceil(d.xPosition)))/2 },
-        y: function(d){return height + itemNameGap + itemNamestagger*d.yPosition} //yPosition is a 0-1 variable
+        y: function(d){return height - padding.bottom/2.5 + itemNamestagger*d.yPosition} //yPosition is a 0-1 variable
       })
       .style('text-anchor', 'middle')
       .style('font-size', xFont)
@@ -180,21 +178,21 @@ function ready(error, segmentation, segZoneLabels, segItemLabels){
       .enter()
       .append('rect')
       .attr({
-        x: function(d) {return xScale(d.dotPosition) - containerPadding.left},
+        x: function(d) {return xScale(d.dotPosition) - dotRadius},
         y: 0,
-        height: height + zoneNameGap,
-        width: xFont,
+        height: height - padding.bottom/1.5,
+        width: 2*dotRadius,
         class: 'zoneMean',
         id: function(d){return d.zoneCode}
       })
-      .style("fill-opacity", "0")
+      .attr("fill-opacity", "0")
       .style('cursor', 'default')
       .on('mouseover', mouseoverRect)
       .on('mouseout', mouseoutRect);
 
   segChart.append('g') //Adding the axis to the bottom of the first panel
       .attr('class', 'y-axis')
-      .attr("transform", "translate(" + (3*containerPadding.left) + ", 0)")
+      //.attr("transform", "translate(" + (3*containerPadding.left) + ", 0)")
       .style('cursor', 'default')
       .call(yAxis)
 
@@ -210,6 +208,7 @@ function ready(error, segmentation, segZoneLabels, segItemLabels){
         fill: function(d){return colorScale(d.seg)},
         class: 'dots'
       })
+      .attr("fill-opacity", "0.8")
       .on('mouseover', mouseoverDot)
       .on('mouseout', mouseoutDot)
 
@@ -228,7 +227,7 @@ function ready(error, segmentation, segZoneLabels, segItemLabels){
   //DEFINING THE MOUSEOVER FUNCTION
   function mouseoverRect(d){
     d3.selectAll('.dots').filter(function(e){return e.zoneCode != d.zoneCode}).classed('zoneHoverHide', true)
-    d3.selectAll('.dots').filter(function(e){return e.zoneCode == d.zoneCode}).classed('zoneHoverShow', true)
+    d3.selectAll('.dots').filter(function(e){return e.zoneCode == d.zoneCode}).classed('zoneHoverShow', true).attr({r: 1.5*dotRadius})
     d3.selectAll('.meanCross').filter(function(e){return e.zoneCode != d.zoneCode}).classed('meanHoverHide', true)
     d3.selectAll('.meanCross').filter(function(e){return e.zoneCode == d.zoneCode}).classed('meanHoverShow', true)
     d3.selectAll('.zoneLab').filter(function(e){return e.zoneCode != d.zoneCode}).classed('meanHoverHide', true)
@@ -236,7 +235,7 @@ function ready(error, segmentation, segZoneLabels, segItemLabels){
   }
   function mouseoutRect(d){
     d3.selectAll('.dots').filter(function(e){return e.zoneCode != d.zoneCode}).classed('zoneHoverHide', false)
-    d3.selectAll('.dots').filter(function(e){return e.zoneCode == d.zoneCode}).classed('zoneHoverShow', false)
+    d3.selectAll('.dots').filter(function(e){return e.zoneCode == d.zoneCode}).classed('zoneHoverShow', false).attr({r: dotRadius})
     d3.selectAll('.meanCross').filter(function(e){return e.zoneCode != d.zoneCode}).classed('meanHoverHide', false)
     d3.selectAll('.meanCross').filter(function(e){return e.zoneCode == d.zoneCode}).classed('meanHoverShow', false)
     d3.selectAll('.zoneLab').filter(function(e){return e.zoneCode != d.zoneCode}).classed('meanHoverHide', false)
