--- a/passthrough.html
+++ b/passthrough.html
@@ -27,7 +27,7 @@ line {
   stroke-width:0.7px;
 }
 .zoneHoverHide {
-  fill: silver;
+  fill: none;
   stroke:black;
   stroke-width:0.2px;
 }
@@ -127,23 +127,6 @@ function ready(error, passthrough, passZoneLabels, passItemLabels) {
 
   //DRAWING THE DIFFERENT ELEMENTS ON THE CANVAS
   passChart.append('g')
-      .selectAll('.meanCross')
-      .data(passZoneLabels)
-      .enter()
-      .append('text')
-      .text('x')
-      .attr({
-        x: function(d){return xScale(d.dotPosition)},
-        y: function(d){return yScale(d.mean)},
-        class: 'meanCross'
-      })
-      .attr('font-size', xFont)
-      .style('font-weight', 'bold')
-      .style('alignment-baseline', 'central')
-      .style('text-anchor', 'middle')
-      .style('cursor', 'default');
-
-  passChart.append('g')
       .attr('class', 'zone-labels') //corresponding to each column of dots
       .selectAll('text')
       .data(passZoneLabels)
@@ -214,6 +197,26 @@ function ready(error, passthrough, passZoneLabels, passItemLabels) {
       .on('mouseout', mouseoutDot)
 
   passChart.append('g')
+      .selectAll('.meanCross')
+      .data(passZoneLabels)
+      .enter()
+      .append('text')
+      .text('x')
+      .attr({
+        x: function(d){return xScale(d.dotPosition)},
+        y: function(d){return yScale(d.mean)},
+        class: 'meanCross'
+      })
+      .attr('font-size', xFont)
+      .style('font-weight', 'bold')
+      .style('alignment-baseline', 'central')
+      .style('text-anchor', 'middle')
+      .style('cursor', 'default')
+      .on('mouseover', mouseoverCross)
+      .on('mouseout', mouseoutCross);
+
+
+  passChart.append('g')
       .selectAll('.meanLines')
       .data(filterData(passItemLabels, 0))
       .enter()
@@ -228,7 +231,7 @@ function ready(error, passthrough, passZoneLabels, passItemLabels) {
   //DEFINING THE MOUSEOVER FUNCTION
   function mouseoverRect(d){
     d3.selectAll('.dots').filter(function(e){return e.zoneCode != d.zoneCode}).classed('zoneHoverHide', true)
-    d3.selectAll('.dots').filter(function(e){return e.zoneCode == d.zoneCode}).classed('zoneHoverShow', true)
+    d3.selectAll('.dots').filter(function(e){return e.zoneCode == d.zoneCode}).classed('zoneHoverShow', true).attr({r: 1.5*dotRadius})
     d3.selectAll('.meanCross').filter(function(e){return e.zoneCode != d.zoneCode}).classed('meanHoverHide', true)
     d3.selectAll('.meanCross').filter(function(e){return e.zoneCode == d.zoneCode}).classed('meanHoverShow', true)
     d3.selectAll('.zoneLab').filter(function(e){return e.zoneCode != d.zoneCode}).classed('meanHoverHide', true)
@@ -236,7 +239,7 @@ function ready(error, passthrough, passZoneLabels, passItemLabels) {
   }
   function mouseoutRect(d){
     d3.selectAll('.dots').filter(function(e){return e.zoneCode != d.zoneCode}).classed('zoneHoverHide', false)
-    d3.selectAll('.dots').filter(function(e){return e.zoneCode == d.zoneCode}).classed('zoneHoverShow', false)
+    d3.selectAll('.dots').filter(function(e){return e.zoneCode == d.zoneCode}).classed('zoneHoverShow', false).attr({r: dotRadius})
     d3.selectAll('.meanCross').filter(function(e){return e.zoneCode != d.zoneCode}).classed('meanHoverHide', false)
     d3.selectAll('.meanCross').filter(function(e){return e.zoneCode == d.zoneCode}).classed('meanHoverShow', false)
     d3.selectAll('.zoneLab').filter(function(e){return e.zoneCode != d.zoneCode}).classed('meanHoverHide', false)
@@ -251,6 +254,22 @@ function ready(error, passthrough, passZoneLabels, passItemLabels) {
   function mouseoutDot(d){
     d3.selectAll('.dots').filter(function(e){return e.state != d.state}).classed('zoneHoverHide', false)
     d3.selectAll('.dots').filter(function(e){return e.state == d.state}).classed('zoneHoverShow', false).attr({r: dotRadius})
+  }
+  function mouseoverCross(d){
+    d3.selectAll('.dots').filter(function(e){return e.zoneCode != d.zoneCode}).classed('zoneHoverHide', true)
+    d3.selectAll('.dots').filter(function(e){return e.zoneCode == d.zoneCode}).classed('zoneHoverShow', true)
+    d3.selectAll('.meanCross').filter(function(e){return e.zoneCode != d.zoneCode}).classed('meanHoverHide', true)
+    d3.selectAll('.meanCross').filter(function(e){return e.zoneCode == d.zoneCode}).classed('meanHoverShow', true)
+    d3.selectAll('.zoneLab').filter(function(e){return e.zoneCode != d.zoneCode}).classed('meanHoverHide', true)
+    d3.selectAll('.zoneLab').filter(function(e){return e.zoneCode == d.zoneCode}).classed('meanHoverShow', true)
+  }
+  function mouseoutCross(d){
+    d3.selectAll('.dots').filter(function(e){return e.zoneCode != d.zoneCode}).classed('zoneHoverHide', false)
+    d3.selectAll('.dots').filter(function(e){return e.zoneCode == d.zoneCode}).classed('zoneHoverShow', false)
+    d3.selectAll('.meanCross').filter(function(e){return e.zoneCode != d.zoneCode}).classed('meanHoverHide', false)
+    d3.selectAll('.meanCross').filter(function(e){return e.zoneCode == d.zoneCode}).classed('meanHoverShow', false)
+    d3.selectAll('.zoneLab').filter(function(e){return e.zoneCode != d.zoneCode}).classed('meanHoverHide', false)
+    d3.selectAll('.zoneLab').filter(function(e){return e.zoneCode == d.zoneCode}).classed('meanHoverShow', false)
   }
 
 }
