--- a/integrated.html
+++ b/integrated.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 
 <head>
-<title>Line Magic</title>
+<title>Nigeria Price Monitor</title>
 <script src="libraries/d3.v3.min.js"></script>
 <script src="libraries/topojson.v1.min.js"></script>
 <script src="libraries/queue.v1.min.js"></script>
@@ -128,17 +128,13 @@ body {
 			</div>
 		</div>
 		<div class="tab-pane" id="indicators">
-			<div id="selectorDiv">
-				<select id="productSelect">
-					<option selected value="Cement Dangote">Cement Dangote</option>
-					<option value="Drink Swan Water Bottle">Drink Swan Water Bottle</option>
-					<option value="Maize White">Maize White</option>
-					<option value="Maize Yellow">Maize Yellow</option>
-					<option value="Rice Imported">Rice Imported</option>
-					<option value="Rice Local">Rice Local</option>
-					<option value="Sorghum">Sorghum</option>
-				</select>
+			<div id="tab2row1">
+				<div id="segmentationContainer"></div>
+				<div id="passthroughContainer"></div>
 			</div>
+				<div id="tab2row2">
+			</div>
+
 		</div>
 	</div>
 </div>
